force-app/main/default/objects/Regenerative_Summary__c/Regenerative_Summary__c.object-meta.xml
<CustomObject>
    <label>Regenerative Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regenerative Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>