force-app/main/default/objects/Regenerative_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regenerative Summary</relationshipLabel>
    <relationshipName>Regenerative_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>