force-app/main/default/objects/Regenerative_Summary__c/fields/Regen_Item_1_YTD__c.field-meta.xml
<CustomField>
    <fullName>Regen_Item_1_YTD__c</fullName>
    <label>Bonegraft YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>