force-app/main/default/objects/Regenerative_Summary__c/fields/Regen_Item_2_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Regen_Item_2_PYTD__c</fullName>
    <label>Regen Instruments PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>