force-app/main/default/objects/Regenerative_Summary__c/fields/Regen_Item_3_FPY__c.field-meta.xml
<CustomField>
    <fullName>Regen_Item_3_FPY__c</fullName>
    <label>Membrane FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>