force-app/main/default/objects/Regenerative_Summary__c/fields/Regen_Item_5_Perc_Change__c.field-meta.xml
<CustomField>
    <fullName>Regen_Item_5_Perc_Change__c</fullName>
    <formula>IF( Regen_Item_4_PYTD__c &lt;&gt;0, ( Regen_Item_4_YTD__c -  Regen_Item_5_PYTD__c )/ ABS(Regen_Item_5_PYTD__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Woundcare % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>